flux/clusters/management/apps/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  gitea
  namespace: gitea
  labels:
    app:  gitea
spec:
  selector:
    matchLabels:
      app: gitea
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  gitea
    spec:
      containers:
      - name:  gitea
        image:  docker.gitea.com/gitea:1.23.5
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 800m
            memory: 4Gi
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 3000
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  3000
        - containerPort: 22
          name:  gitea
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        - name: gitea-data
          mountPath: /data
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: timezone
          hostPath:
            path: /etc/timezone
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
      restartPolicy: Always
