flux/clusters/management/apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    app: gitea
  type: ClusterIP
  ports:
  - name: gitea
    protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  annotations:
    lbipam.cilium.io/sharing-key: homelab
    lbipam.cilium.io/sharing-cross-namespace: "*"
spec:
  selector:
    app: gitea
  type: LoadBalancer
  loadBalancerIP: "192.168.100.150"
  ports:
  - name: gitea
    protocol: TCP
    port: 22
    targetPort: 22
